--- a/src/styles/components/fields/_field.scss
+++ b/src/styles/components/fields/_field.scss
@@ -1,6 +1,6 @@
 .field {
   align-items: center;
-  border-top:$border-light;
+  border-top: $border-light;
   color: #6d6d6d;
   display: flex;
   font-size: $font-size;
@@ -18,7 +18,7 @@
 
 .field__no-title {
   width: 100%;
-  padding: 0 12px;
+  padding: 3px 12px;
 }
 
 .field__no-title--center {
